<resources>
    <string name="app_name">ОГЭ Тренер</string>
    <string name="openTasks">Задания</string>
    <string name="openTasks1_5">Задания 1–5</string>
    <string name="openTheory">Теория</string>
    <string name="openDraft">Черновик</string>
    <string name="develop">В разработке</string>
    <string name="openStatistics">Статистика</string>
    <string name="choiceTask">Выберите номер задания</string>
    <string name="bt1_5">1–5</string>
    <string name="bt1">1</string>
    <string name="bt2">2</string>
    <string name="bt3">3</string>
    <string name="bt4">4</string>
    <string name="bt5">5</string>
    <string name="bt6">6</string>
    <string name="bt7">7</string>
    <string name="bt8">8</string>
    <string name="bt9">9</string>
    <string name="bt10">10</string>
    <string name="bt11">11</string>
    <string name="bt12">12</string>
    <string name="bt13">13</string>
    <string name="bt14">14</string>
    <string name="bt15">15</string>
    <string name="bt16">16</string>
    <string name="bt17">17</string>
    <string name="bt18">18</string>
    <string name="bt19">19</string>
    <string name="bt20">20</string>
    <string name="bt21">21</string>
    <string name="bt22">22</string>
    <string name="bt23">23</string>
    <string name="bt24">24</string>
    <string name="bt25">25</string>
    <string name="bt26">26</string>
    <string name="falseAnswer">Неверно</string>
    <string name="trueAnswer">Верно</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check">Проверить</string>
    <string name="solut">Решение</string>
    <string name="answer">Ответ</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="undo">Вернуть</string>
    <string name="ret">return</string>
    <string name="btnEraser_descr">Ластик</string>
    <string name="btnColor_descr">Цвет</string>
    <string name="brush_size">5dp</string>
    <string name="stat_info">Статистика выполненных заданий</string>
    <string name="answ_1">Отметить нерешенным</string>
    <string name="answ_0">Отметить решенным</string>
    <string name="true_answ">Правильный ответ!</string>
    <string name="decided">Решено</string>
</resources>