<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backg"
    tools:context=".Task6_19Fragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:touchscreenBlocksFocus="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/imageLastList"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/ret"
                android:scaleType="fitCenter"
                android:src="@drawable/back"
                app:cornerRadius="12dp"
                tools:ignore="MissingConstraints" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageLastList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageLastList"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ScrollViewCount">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonTask1"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="54dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/lightblue"
                        android:text="@string/bt1"
                        android:textColor="?attr/btntextColor"
                        app:cornerRadius="12dp" />

                    <Button
                        android:id="@+id/buttonTask2"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="54dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/lightblue"
                        android:text="@string/bt2"
                        android:textColor="?attr/btntextColor"
                        app:cornerRadius="12dp" />

                    <Button
                        android:id="@+id/buttonTask3"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="54dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/lightblue"
                        android:text="@string/bt3"
                        android:textColor="?attr/btntextColor"
                        app:cornerRadius="12dp" />

                    <Button
                        android:id="@+id/buttonTask4"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="54dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/lightblue"
                        android:text="@string/bt4"
                        android:textColor="?attr/btntextColor"
                        app:cornerRadius="12dp" />

                    <Button
                        android:id="@+id/buttonTask5"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="54dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/lightblue"
                        android:text="@string/bt5"
                        android:textColor="?attr/btntextColor"
                        app:cornerRadius="12dp" />

                    <Button
                        android:id="@+id/buttonTask6"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="54dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/lightblue"
                        android:text="@string/bt6"
                        android:textColor="?attr/btntextColor"
                        app:cornerRadius="12dp" />

                    <Button
                        android:id="@+id/buttonTask7"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="54dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/lightblue"
                        android:text="@string/bt7"
                        android:textColor="?attr/btntextColor"
                        app:cornerRadius="12dp" />
                </LinearLayout>
            </HorizontalScrollView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/getAnswerEdText"

                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTask">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filledTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer"
                    android:textColor="@color/black">


                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/answBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/lightblue"
                android:padding="20dp"
                android:text="@string/check"
                android:textColor="?attr/btntextColor"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/getAnswerEdText" />


            <Button
                android:id="@+id/solutBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/lightblue"
                android:padding="20dp"
                android:text="@string/solut"
                android:textColor="?attr/btntextColor"
                app:cornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/answBtn" />

            <Button
                android:id="@+id/unsolveBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingVertical="20dp"
                android:gravity="right|end"
                android:text="@string/answ_1"
                android:layout_marginEnd="20dp"
                android:visibility="invisible"
                app:cornerRadius="15dp"
                android:backgroundTint="@color/nodarkblue"
                app:layout_constraintBottom_toBottomOf="@+id/answBtn"
                app:layout_constraintEnd_toEndOf="@+id/getAnswerEdText"
                app:layout_constraintTop_toTopOf="@+id/answBtn"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/trFlAnswText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/true_answ"
                android:visibility="invisible"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/answBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/answBtn"
                app:layout_constraintTop_toTopOf="@+id/answBtn" />

            <TextView
                android:id="@+id/trAnswText1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:textColor="?attr/textColor"
                app:layout_constraintBottom_toBottomOf="@+id/solutBtn"
                app:layout_constraintStart_toEndOf="@+id/solutBtn"
                app:layout_constraintTop_toTopOf="@+id/solutBtn" />

            <TextView
                android:id="@+id/decidedText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:text="@string/decided"
                android:layout_marginHorizontal="20dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/taskNum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskNum" />

            <TextView
                android:id="@+id/taskNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/openTasks"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

            <WebView
                android:id="@+id/textTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/decidedText"/>

            <ImageButton
                android:id="@+id/infoButton"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:backgroundTint="@android:color/transparent"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/info"
                app:layout_constraintBottom_toBottomOf="@+id/taskNum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/taskNum"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/open" />

            <TextView
                android:id="@+id/textInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/text_style"
                android:padding="5dp"
                android:paddingEnd="10dp"
                android:shadowColor="@color/nodarkblue"
                android:text=""
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/infoButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/taskNum"
                app:layout_constraintTop_toBottomOf="@+id/infoButton"
                tools:ignore="RtlSymmetry" />

            <ImageButton
                android:id="@+id/closeButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:backgroundTint="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/close"
                android:visibility="invisible"
                android:contentDescription="@string/close"
                app:layout_constraintEnd_toEndOf="@+id/textInfo"
                app:layout_constraintTop_toTopOf="@+id/textInfo" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>