<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/openTasksButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/openTasks"
            app:tint="?attr/menuColor"
            app:srcCompat="@drawable/tasks" />

        <ImageButton
            android:id="@+id/openTheoryButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/theme"
            android:contentDescription="@string/openTheory"
            app:tint="?attr/menuColor"
            app:srcCompat="@drawable/theory" />

        <ImageButton
            android:id="@+id/openDraftButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/openDraft"
            app:tint="?attr/menuColor"
            app:srcCompat="@drawable/draft" />

        <ImageButton
            android:id="@+id/openStatisticsButton"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/openStatistics"
            app:tint="?attr/menuColor"
            app:srcCompat="@drawable/statistics" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>